Changed package name and info and version

--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "cordova-plugin-prevent-screenshot-coffice",
-  "version": "1.0.2",
+  "name": "cordova-plugin-screenshot-blocker",
+  "version": "1.0.3",
   "description": "Cordova plugin for prevent screenCapture",
   "cordova": {
-    "id": "cordova-plugin-prevent-screenshot-coffice",
+    "id": "cordova-plugin-screenshot-blocker",
     "platforms": [
       "ios",
       "android"
@@ -11,18 +11,18 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/flotrugliocoffice/cordova-plugin-prevent-screenshot-coffice.git"
+    "url": "git+https://github.com/odeann/cordova-plugin-screenshot-blocker.git"
   },
-  "author": "Francesco Lo Truglio <flotruglio@cofficegroup.com> (https://www.cofficegroup.com)",
+  "author": "Francesco Lo Truglio <flotruglio@cofficegroup.com> (https://www.cofficegroup.com), Igor I. Kuzmin <random@academic.ru>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/flotrugliocoffice/cordova-plugin-prevent-screenshot-coffice/issues"
+    "url": "https://github.com/odeann/cordova-plugin-screenshot-blocker/issues"
   },
   "scripts": {
     "version": "replace -s 'version=\"(.+)(?=\">)' 'version=\"'$npm_package_version plugin.xml && git add plugin.xml",
     "postversion": "git push && git push --tags"
   },
-  "homepage": "https://github.com/flotrugliocoffice/cordova-plugin-prevent-screenshot-coffice#readme",
+  "homepage": "https://github.com/odeann/cordova-plugin-screenshot-blocker#readme",
   "keywords": [
     "cordova",
     "screencapture",
