--- a/plugin.xml
+++ b/plugin.xml
@@ -1,14 +1,14 @@
 <plugin xmlns="http://apache.org/cordova/ns/plugins/1.0"
         xmlns:android="http://schemas.android.com/apk/res/android"
-        id="cordova-plugin-prevent-screenshot-coffice"
-        version="1.0.2">
+        id="cordova-plugin-screenshot-blocker"
+        version="1.0.3">
 
-    <name>cordova-plugin-prevent-screenshot-coffice</name>
+    <name>cordova-plugin-screenshot-blocker</name>
     <description>Cordova plugin for prevent screenCapture</description>
     <license>MIT</license>
     <keywords>cordova</keywords>
-    <repo>https://github.com/flotrugliocoffice/cordova-plugin-prevent-screenshot-coffice</repo>
-    <issue>https://github.com/flotrugliocoffice/cordova-plugin-prevent-screenshot-coffice/issues</issue>
+    <repo>https://github.com/odeann/cordova-plugin-screenshot-blocker</repo>
+    <issue>https://github.com/odeann/cordova-plugin-screenshot-blocker/issues</issue>
 
     <js-module src="www/screenshot.js" name="screenshot">
         <clobbers target="window.plugins.preventscreenshot"/>
@@ -23,12 +23,12 @@
     <platform name="android">
         <config-file target="res/xml/config.xml" parent="/*">
             <feature name="screenshotName">
-                <param name="android-package" value="com.coffice.ScreenshotBlocker"/>
+                <param name="android-package" value="com.brealit.ScreenshotBlocker"/>
                 <param name="onload" value="true"/>
             </feature>
         </config-file>
 
-        <source-file src="src/android/com/coffice/ScreenshotBlocker.java" target-dir="src/com/coffice"/>
+        <source-file src="src/android/com/brealit/ScreenshotBlocker.java" target-dir="src/com/brealit"/>
     </platform>
 
     <platform name="ios">
